--- a/templates/newpost.html
+++ b/templates/newpost.html
@@ -8,9 +8,9 @@
         <h2 class="form-signin-heading">New post</h2>
 
         <label for="inputSubject" class="aria-label">Subject</label>
-        <name="subject" value="{{subject}}" id="inputSubject" class="form-control" placeholder="" required autofocus >
+        <input type="text" name="subject" value="{{subject}}" id="inputSubject" class="form-control" placeholder="" required autofocus >
 
-        <label for="inputSubject" class="aria-label">Subject</label>
+        <label for="inputSubject" class="aria-label">Write your thoughts below</label>
         <textarea name="content">{{content}}</textarea>
 
         <div class="error">
