--- a/static/blog.css
+++ b/static/blog.css
@@ -3,7 +3,7 @@
  */
 
 body {
-  font-family: Georgia, "Times New Roman", Times, serif;
+  font-family: 'Slabo 27px', serif;
   color: #555;
 }
 
@@ -14,7 +14,7 @@ h4, .h4,
 h5, .h5,
 h6, .h6 {
   margin-top: 0;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-weight: normal;
   color: #333;
 }
@@ -87,6 +87,7 @@ h6, .h6 {
   margin-bottom: 0;
   font-size: 60px;
   font-weight: normal;
+  text-transform: uppercase;
 }
 .blog-description {
   font-size: 20px;
@@ -149,6 +150,43 @@ h6, .h6 {
   color: #999;
 }
 
+/*
+ *Custom styles
+ */
+
+ a.helloUser{
+  color: #fff;
+  font-style: bold;
+  margin-right: 5px;
+ }
+
+textarea{
+  width: 500px;
+  height: 400px;
+  margin-bottom: 5px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+  color: #555; */
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+  -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+  -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+  transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+}
+
+h2.form-signin-heading{
+  color: #337ab7;
+  font-size: 25px;
+  font-style: bold;
+}
+
+.form-control{
+  margin-bottom: 10px;
+}
 
 /*
  * Footer
