--- a/templates/base.html
+++ b/templates/base.html
@@ -12,23 +12,25 @@
     <title>Udacity Full Stack Nano Degree-Multi blog Project </title>
 
     <!-- Bootstrap core CSS -->
-    <link href="static/bootstrap.min.css" rel="stylesheet">
+    <link href="../../static/bootstrap.min.css" rel="stylesheet">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="static/ie10-viewport-bug-workaround.css" rel="stylesheet">
+    <link href="../../static/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="static/blog.css" rel="stylesheet">
+    <link href="../../static/blog.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="static/ie-emulation-modes-warning.js"></script>
+    <script src="../../static/ie-emulation-modes-warning.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Slabo+27px" rel="stylesheet">
   </head>
 
 <body>
@@ -40,7 +42,11 @@
         <!--Login- signup section of the navbar-->
         <ul class="nav navbar-nav navbar-right">
         {% if user %}
-        {{user.name}}<a href="/logout">logout</a>
+          <a class="helloUser">Hi, {{user.name}}!</a>
+            <a class="btn btn-success" href="/blog/newpost">New Post
+                <span class="glyphicon glyphicon-pencil" aria-hidden="true"/>
+            </a>
+            <a class="btn btn-primary" href="/logout">Logout</a>
         {% else %}
             <a class="blog-nav-item" href="/login">Login</a>
             <a class="blog-nav-item" href="/signup">Sign up</a>
@@ -59,23 +65,30 @@
 
       <div class="row">
         <div class="col-sm-8 blog-main">
-
           {% block content %}
           {% endblock %}
         </div>
       </div>
-  
+      
+
+
   </div>
 
+ <footer class="blog-footer">
+      <p>Made by <a href="#">A. Gepulle</a>.</p>
+      <p>
+        <a href="#">Back to top</a>
+      </p>
+    </footer>
 
 <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="static/jquery.min.js"><\/script>')</script>
-    <script src="static/bootstrap.min.js"></script>
+    <script src="../static/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="static/ie10-viewport-bug-workaround.js"></script>
+    <script src="../static/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
 
