--- a/templates/post.html
+++ b/templates/post.html
@@ -4,7 +4,7 @@
   <div class="blog-post">
    
     <h2 class="blog-post-title"><a href="/blog/{{p.key().id()}}#">{{p.subject}}</a></h2>
-      <p class="blog-post-meta">{{p.created.strftime("%b %d, %Y")}} </p>
+      <p class="blog-post-meta">{{p.created.strftime("%b %d, %Y")}} by {{p.getUserName()}} </p>
 
             <p> {{p._render_text | safe}}</p>
     </div>
